Fixed tables on mobile

--- a/main.css
+++ b/main.css
@@ -216,6 +216,7 @@ a:active {
 ********************************************/
 
 @media (orientation: portrait) {
+    
 
 	header {
 		font-size: 35px;
@@ -236,4 +237,14 @@ a:active {
 		border-left-style: none;
 		border-bottom-style: solid;
 	}
+
+	.divTable-cell {
+		display: inline-block;
+		padding-right: 0px;
+	}
+
+	.divTable-row .divTable-cell:last-child {
+		padding-bottom: 20px; 
+	}
+
 }
